fix subdomainnavbar with long titles and 2 buttons

--- a/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -202,6 +202,10 @@
     max-width: 520px;
     margin-right: 80px;
   }
+
+  .SubdomainNavBar-outer-container--has-actions .SubdomainNavBar-primary-nav-list {
+    max-width: 465px;
+  }
 }
 
 .SubdomainNavBar-primary-nav-list-item {
