Solutions + Story scroll (#623)
* solutions lp + story scrolling

* add enterprise example

* remove hr and replace with PB border

* remove unused imports

* add stacking effect

* upgrade to workspace version

* updating to latest designs

* replace custom statistics

* remove unused imports

* add fade in to video to mask layout shift

* add narrow stories

* updated landing page designs

* update hero bgs

* fix a11y violations

* add parallax to portal page

* use dark mode hero image on portal

* remove old import

* add additional changesets

* qa feedback

* apply more design qa feedback

* update snapshots

* delete old test files

* remove the actual test file

* fix breadcrumbs

* update snapshots

* change disable to disabled

--- a/packages/react/src/Hero/Hero.module.css
+++ b/packages/react/src/Hero/Hero.module.css
@@ -54,6 +54,10 @@
   max-width: 18ch;
 }
 
+.Hero-heading--fullWidth {
+  max-width: unset;
+}
+
 .Hero-description {
   margin: var(--base-size-24) 0 0;
   max-width: 50ch;
