--- a/packages/react/src/VideoPlayer/VideoPlayer.module.css
+++ b/packages/react/src/VideoPlayer/VideoPlayer.module.css
@@ -48,24 +48,15 @@
   z-index: 1;
 }
 
-.VideoPlayer__playButtonInner {
+.VideoPlayer__playButtonOverlay {
   height: var(--brand-VideoPlayer-playButton-height);
   width: var(--brand-VideoPlayer-playButton-width);
-  display: inline-block;
-  padding: var(--brand-VideoPlayer-playButton-padding);
-  box-sizing: content-box;
-  background: var(--brand-videoPlayer-playButton-bgColor-rest);
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-.VideoPlayer__playButtonInner > svg {
-  margin-left: 0.3125rem;
+  opacity: 0.8;
 }
 
 .VideoPlayer__playButton:focus {
   border: var(--brand-borderWidth-thick) solid var(--brand-color-focus);
-  box-shadow: 0 0 0 2px var(--brand-color-focus);
+  box-shadow: 0 0 0 0.125rem var(--brand-color-focus);
 }
 
 .VideoPlayer__playButton svg {
@@ -78,32 +69,22 @@
 
 .VideoPlayer__title {
   transition: var(--brand-VideoPlayer-transition);
-  top: -10px;
-  opacity: 0;
+  top: 0;
   position: absolute;
   border-radius: var(--brand-borderRadius-medium);
   left: 0;
   width: 100%;
   z-index: 2;
-  padding: var(--base-size-16) var(--base-size-24);
+  padding: var(--base-size-16);
   color: var(--brand-videoPlayer-title-fgColor);
   display: grid;
   align-items: center;
   justify-content: flex-start;
-  grid-gap: 10px;
+  grid-gap: var(--base-size-12);
   grid-template-columns: auto auto;
   background: var(--brand-videoPlayer-title-bgColor);
 }
 
-.VideoPlayer__showOverlays .VideoPlayer__title {
-  top: 0;
-  opacity: 1;
-}
-
-.VideoPlayer__overlays:hover .VideoPlayer__title {
-  top: 0;
-  opacity: 1;
-}
 
 /* ---------------------------------------------------------- */
 /* 5. Controls                                                */
@@ -111,18 +92,23 @@
 
 .VideoPlayer__controls {
   transition: var(--brand-VideoPlayer-transition);
-  bottom: -58px;
+  bottom: 0;
   position: absolute;
   z-index: 2;
   width: 100%;
   pointer-events: none;
+  opacity: 1;
+  transition: opacity 2s ease-in-out;
+}
+
+.VideoPlayer__controls--hidden {
+  opacity: 0;
 }
 
 .VideoPlayer__controlsBar {
   display: flex;
   gap: var(--base-size-16);
   align-items: center;
-  opacity: 0;
   border-bottom-right-radius: var(--brand-borderRadius-medium);
   border-bottom-left-radius: var(--brand-borderRadius-medium);
   left: 0;
@@ -142,29 +128,13 @@
   opacity: 1;
 }
 
-.VideoPlayer__showOverlays .VideoPlayer__controls {
-  bottom: 0;
-}
-
-.VideoPlayer__showOverlays .VideoPlayer__controlsBar {
-  opacity: 1;
-}
-
-.VideoPlayer__overlays:hover .VideoPlayer__controlsBar {
-  opacity: 1;
-}
-
-.VideoPlayer__overlays:hover .VideoPlayer__controls {
-  bottom: 0;
-  opacity: 1;
-}
 
 .VideoPlayer__iconControl {
   width: auto;
   background: none;
   border: none;
   cursor: pointer;
-  height: 24px;
+  height: var(--base-size-24);
   box-sizing: content-box;
   position: relative;
   padding: 0;
@@ -173,7 +143,7 @@
 .VideoPlayer__iconControl:focus-visible {
   border-color: var(--brand-color-focus);
   outline: none;
-  box-shadow: 0 0 0 2px var(--brand-color-focus);
+  box-shadow: 0 0 0 0.125rem var(--brand-color-focus);
   opacity: 1;
 }
 
@@ -202,13 +172,13 @@
 
 .VideoPlayer__progressBar {
   flex: 1;
-  height: 6px;
+  height: var(--base-size-6);
 }
 
 .VideoPlayer__closedCaption {
   border-radius: var(--brand-borderRadius-medium);
-  padding: 1px 5px;
-  border: 2px solid var(--brand-videoPlayer-closedCaption-borderColor-enabled);
+  padding: 0.125rem var(--base-size-4);
+  border: 0.125rem solid var(--brand-videoPlayer-closedCaption-borderColor-enabled);
   background: var(--brand-videoPlayer-closedCaption-bgColor-enabled);
   position: relative;
 }
@@ -260,7 +230,7 @@
 .VideoPlayer__rangeInput:focus-visible {
   border-color: var(--brand-color-focus);
   outline: none;
-  box-shadow: 0 0 0 2px var(--brand-color-focus);
+  box-shadow: 0 0 0 0.125rem var(--brand-color-focus);
   opacity: 1;
 }
 
@@ -318,8 +288,8 @@
   left: 50%;
   bottom: 100%;
   z-index: 2;
-  width: 10px;
-  height: 10px;
+  width: var(--base-size-8);
+  height: var(--base-size-8);
   margin-bottom: var(--base-size-16);
   pointer-events: none;
   opacity: 0;
@@ -329,10 +299,10 @@
 
 .VideoPlayer__tooltip::before {
   position: absolute;
-  bottom: -4px;
+  bottom: calc(var(--base-size-4) * -1));
   left: 0;
-  width: 10px;
-  height: 10px;
+  width: var(--base-size-12);
+  height: var(--base-size-12);
   content: '';
   background: var(--base-color-scale-white-0);
   border-radius: var(--brand-borderRadius-small);
@@ -345,7 +315,7 @@
   left: 50%;
   z-index: -1;
   background: white;
-  box-shadow: 0 4px 4px #1b1f2433;
+  box-shadow: 0 var(--base-size-4) var(--base-size-4) #1b1f2433;
   transform: translate3d(-50%, 0, 0);
   padding: var(--brand-VideoPlayer-tooltip-padding);
   border-radius: var(--brand-borderRadius-medium);
