Add multiple background image support

--- a/packages/react/src/Section/Section.features.module.css
+++ b/packages/react/src/Section/Section.features.module.css
@@ -11,6 +11,7 @@
     #ffb5b380 100%
   ) !important;
   background-size: 5.66px 5.66px !important;
+  background-repeat: repeat !important;
 }
 
 .paddingInnerItem {
