--- a/packages/react/src/Section/Section.features.module.css
+++ b/packages/react/src/Section/Section.features.module.css
@@ -12,8 +12,22 @@
   ) !important;
   background-size: 5.66px 5.66px !important;
   background-repeat: repeat !important;
+  overflow: hidden;
 }
 
 .paddingInnerItem {
+  position: relative;
+  z-index: 1;
   background-color: #fff;
+}
+
+.paddingInnerItem::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100vw;
+  height: 100%;
+  width: 200vw;
+  background: #fff;
+  z-index: -1;
 }
