--- a/packages/react/src/forms/FormControl/FormControl.module.css
+++ b/packages/react/src/forms/FormControl/FormControl.module.css
@@ -93,7 +93,8 @@
 }
 
 .FormControl-validation-icon {
-  padding-top: 1px;
+  position: relative;
+  top: -1px;
 }
 
 .FormControl-validation--animate-in {
