nudge FormControl.Validation success icon up slightly

--- a/packages/react/src/forms/FormControl/FormControl.module.css
+++ b/packages/react/src/forms/FormControl/FormControl.module.css
@@ -92,7 +92,12 @@
   color: var(--brand-color-error-fg);
 }
 
-.FormControl-validation-icon {
+.FormControl-validation-success-icon {
+  position: relative;
+  top: -1.6px;
+}
+
+.FormControl-validation-error-icon {
   position: relative;
   top: -1px;
 }
