Update animation playground

--- a/packages/react/src/animation/Animation.stories.module.css
+++ b/packages/react/src/animation/Animation.stories.module.css
@@ -100,7 +100,7 @@
  */
 .Playground {
   background-color: var(--brand-color-neutral-subtle);
-  max-width: 200px;
+  width: 200px;
   min-height: 200px;
 }
 
