--- a/packages/react/src/animation/Animation.stories.module.css
+++ b/packages/react/src/animation/Animation.stories.module.css
@@ -102,6 +102,8 @@
   background-color: var(--brand-color-neutral-subtle);
   width: 200px;
   min-height: 200px;
+  justify-content: center;
+  align-items: center;
 }
 
 .PlaygroundText {
