--- a/packages/react/src/Section/Section.features.module.css
+++ b/packages/react/src/Section/Section.features.module.css
@@ -18,7 +18,7 @@
 .paddingInnerItem {
   position: relative;
   z-index: 1;
-  background-color: #fff;
+  background-color: var(--base-color-scale-white-0);
 }
 
 .paddingInnerItem::before {
