Extend Hero heading and description

--- a/packages/react/src/Hero/Hero.module.css
+++ b/packages/react/src/Hero/Hero.module.css
@@ -51,12 +51,13 @@
 
 .Hero-heading {
   margin: 0;
-  max-width: 18ch;
+  max-width: 924px;
+  text-wrap: balance;
 }
 
 .Hero-description {
   margin: var(--base-size-24) 0 0;
-  max-width: 50ch;
+  max-width: 600px;
 }
 
 .Hero-actions {
