--- a/packages/react/src/animation/TextRevealAnimation/TextRevealAnimation.module.css
+++ b/packages/react/src/animation/TextRevealAnimation/TextRevealAnimation.module.css
@@ -8,10 +8,13 @@
 }
 
 .TextRevealAnimation {
+  opacity: 0;
   visibility: hidden;
+  transition: opacity var(--brand-animation-duration-default) var(--brand-animation-easing-default);
 }
 
 .TextRevealAnimation--visible {
+  opacity: 1;
   visibility: visible;
 }
 
