--- a/packages/react/src/LogoSuite/LogoSuite.module.css
+++ b/packages/react/src/LogoSuite/LogoSuite.module.css
@@ -1,9 +1,9 @@
 .LogoSuite {
-  padding-block-end: var(--brand-LogoSuite-logobar-rowGap);
+  padding-block-end: var(--brand-LogoSuite-logobar-rowGap-default);
 }
 
 .LogoSuite + .LogoSuite {
-  padding-block-start: var(--brand-LogoSuite-logobar-rowGap);
+  padding-block-start: var(--brand-LogoSuite-logobar-rowGap-default);
 }
 
 .LogoSuite__heading + .LogoSuite__description {
@@ -26,7 +26,7 @@
 .LogoSuite__logobar {
   display: flex;
   flex-wrap: wrap;
-  row-gap: var(--brand-LogoSuite-logobar-rowGap);
+  row-gap: var(--brand-LogoSuite-logobar-rowGap-mobile);
   column-gap: var(--brand-LogoSuite-logobar-columnGap);
   justify-content: center;
 }
@@ -41,16 +41,30 @@
 
 .LogoSuite__logobar--variant-muted svg,
 .LogoSuite__logobar--variant-muted img,
-.LogoSuite__logobar--variant-muted a {
-  width: auto;
-  height: var(--base-size-40);
-}
-
+.LogoSuite__logobar--variant-muted a,
 .LogoSuite__logobar--variant-emphasis svg,
 .LogoSuite__logobar--variant-emphasis img,
 .LogoSuite__logobar--variant-emphasis a {
   width: auto;
-  height: var(--base-size-48);
+  height: var(--base-size-32);
+}
+
+@media screen and (min-width: 48rem) {
+  .LogoSuite__logobar {
+    row-gap: var(--brand-LogoSuite-logobar-rowGap-default);
+  }
+
+  .LogoSuite__logobar--variant-muted svg,
+  .LogoSuite__logobar--variant-muted img,
+  .LogoSuite__logobar--variant-muted a {
+    height: var(--base-size-40);
+  }
+
+  .LogoSuite__logobar--variant-emphasis svg,
+  .LogoSuite__logobar--variant-emphasis img,
+  .LogoSuite__logobar--variant-emphasis a {
+    height: var(--base-size-48);
+  }
 }
 
 .LogoSuite__logobar--variant-muted svg,
