--- a/packages/react/src/ComparisonTable/ComparisonTable.module.css
+++ b/packages/react/src/ComparisonTable/ComparisonTable.module.css
@@ -117,17 +117,17 @@
     text-align: left;
   }
 
-  .ComparisonTable th:first-of-type {
+  .ComparisonTable .ComparisonTable-cell-heading:first-child {
     width: 25%;
     margin-right: 40px;
   }
 
-  .ComparisonTable tr td:nth-of-type(1),
-  .ComparisonTable tr:nth-of-type(1) th:nth-of-type(2) {
+  .ComparisonTable tr td:nth-of-type(1):not(.ComparisonTable-cell-heading),
+  .ComparisonTable tr:nth-of-type(1) .ComparisonTable-cell-heading:nth-child(2) {
     width: 40%;
   }
-  .ComparisonTable tr td:nth-of-type(2),
-  .ComparisonTable tr:nth-of-type(1) th:nth-of-type(3) {
+  .ComparisonTable tr td:nth-of-type(2):not(.ComparisonTable-cell-heading),
+  .ComparisonTable tr:nth-of-type(1) .ComparisonTable-cell-heading:nth-child(3) {
     width: 35%;
     margin-left: 40px;
   }
