--- a/packages/react/src/LogoSuite/LogoSuite.module.css
+++ b/packages/react/src/LogoSuite/LogoSuite.module.css
@@ -41,16 +41,26 @@
 
 .LogoSuite__logobar--variant-muted svg,
 .LogoSuite__logobar--variant-muted img,
-.LogoSuite__logobar--variant-muted a {
-  width: auto;
-  height: var(--base-size-40);
-}
-
+.LogoSuite__logobar--variant-muted a,
 .LogoSuite__logobar--variant-emphasis svg,
 .LogoSuite__logobar--variant-emphasis img,
 .LogoSuite__logobar--variant-emphasis a {
   width: auto;
-  height: var(--base-size-48);
+  height: var(--base-size-32);
+}
+
+@media screen and (min-width: 48rem) {
+  .LogoSuite__logobar--variant-muted svg,
+  .LogoSuite__logobar--variant-muted img,
+  .LogoSuite__logobar--variant-muted a {
+    height: var(--base-size-40);
+  }
+
+  .LogoSuite__logobar--variant-emphasis svg,
+  .LogoSuite__logobar--variant-emphasis img,
+  .LogoSuite__logobar--variant-emphasis a {
+    height: var(--base-size-48);
+  }
 }
 
 .LogoSuite__logobar--variant-muted svg,
