--- a/packages/react/src/Timeline/Timeline.module.css
+++ b/packages/react/src/Timeline/Timeline.module.css
@@ -48,8 +48,16 @@
   border-radius: var(--brand-borderRadius-full);
 }
 
-.Timeline__item em {
+.Timeline__text {
   color: var(--brand-color-text-default);
+}
+
+.Timeline__text--muted {
+  color: var(--brand-Timeline-color-text-muted);
+}
+
+.Timeline__item em {
+  color: var(--brand-color-text-emphasis);
   font-style: normal;
   font-weight: 500; /* TODO: update with token when available */
 }
