Add support for duotone text with span elements by default

--- a/packages/react/src/Testimonial/Testimonial.module.css
+++ b/packages/react/src/Testimonial/Testimonial.module.css
@@ -58,7 +58,7 @@
   color: var(--brand-color-text-muted);
 }
 
-.Testimonial-quote em {
+.Testimonial-quote span {
   color: var(--brand-color-text-default);
   font-style: normal;
 }
