--- a/packages/react/src/SectionIntro/SectionIntro.module.css
+++ b/packages/react/src/SectionIntro/SectionIntro.module.css
@@ -10,7 +10,8 @@
   color: var(--brand-color-text-muted);
 }
 
-.SectionIntro-heading--muted em {
+.SectionIntro-heading--muted em,
+.SectionIntro-heading--muted span {
   font-style: normal;
   color: var(--brand-color-text-default);
 }
