--- a/packages/react/src/river/river-shared.module.css
+++ b/packages/react/src/river/river-shared.module.css
@@ -137,8 +137,7 @@
   color: var(--brand-color-text-subtle);
 }
 
-.RiverBreakout .River__text em,
-.RiverBreakout .River__text span {
+.RiverBreakout .River__text em {
   color: var(--brand-color-text-default);
   font-style: normal;
 }
