--- a/packages/react/src/Bento/Bento.module.css
+++ b/packages/react/src/Bento/Bento.module.css
@@ -73,8 +73,7 @@
   color: var(--brand-color-text-muted);
 }
 
-.Bento__heading--muted em,
-.Bento__heading--muted span {
+.Bento__heading--muted em {
   font-style: normal;
   color: var(--brand-color-text-default);
 }
