--- a/packages/react/src/SectionIntro/SectionIntro.module.css
+++ b/packages/react/src/SectionIntro/SectionIntro.module.css
@@ -10,8 +10,7 @@
   color: var(--brand-color-text-muted);
 }
 
-.SectionIntro-heading--muted em,
-.SectionIntro-heading--muted span {
+.SectionIntro-heading--muted em {
   font-style: normal;
   color: var(--brand-color-text-default);
 }
